Update ebook branch with FR translation. Succeeded to build the ebook with Tex Live 2019, 2021 wasn't ok.

--- a/lessons/ch1-07-the-limits-of-knowledge.tex
+++ b/lessons/ch1-07-the-limits-of-knowledge.tex
@@ -1,45 +1,48 @@
-\chapter{The Limits of Knowledge}
+\chapter{Les limites du savoir}
 \label{les:7}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-\enquote{Down, down, down. Would the fall never come to an end?}
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+\enquote{Plus bas, encore plus bas, toujours plus bas. Est-ce que cette chute ne
+finirait jamais ?}
 \end{chapquote}
 
-Getting into Bitcoin is a humbling experience. I thought that I knew
-things. I thought that I was educated. I thought that I knew my computer
-science, at the very least. I studied it for years, so I have to know
-everything about digital signatures, hashes, encryption, operational
-security, and networks, right?
+S'embarquer dans Bitcoin est une expérience humiliante. Je croyais que je savais
+des trucs. Je pensais que j'étais instruit. Au minimum, je tenais ce que j'avais
+appris en informatique pour acquis. J'ai étudié pendant des années, alors je
+dois à peu près tout savoir sur les signatures numériques, le hachage, le
+chiffrement, la sécurité opérationnelle et les réseaux, non ?
 
 \paragraph{}
-Wrong.
+Faux.
 
 \paragraph{}
-Learning all the fundamentals which make Bitcoin work is hard.
-Understanding all of them deeply is borderline impossible.
+C'est difficile d'étudier tous les fondamentaux qui rendent le fonctionnement de
+Bitcoin possible. C'est limite impossible de tous les comprendre en profondeur.
 
 \begin{quotation}\begin{samepage}
-\enquote{No one has found the bottom of the Bitcoin rabbit hole.}
-\begin{flushright} -- Jameson Lopp\footnote{Jameson Lopp, tweet from Nov 11, 2018 \cite{lopp-tweet}}
+\enquote{Personne n'a atteint le fond du terrier du lapin Bitcoin.}
+\begin{flushright} -- Jameson Lopp\footnote{Jameson Lopp, tweet du 11 novembre
+2018 \cite{lopp-tweet}}
 \end{flushright}\end{samepage}\end{quotation}
 
-\begin{center}
+\begin{figure}
   \centering
   \includegraphics[width=7cm]{assets/images/rabbit-hole-bottomless.png}
-  \captionof{figure}{The Bitcoin rabbit hole is bottomless.}
+  \caption{Le terrier du lapin Bitcoin n'a pas de fond.}
   \label{fig:rabbit-hole-bottomless}
-\end{center}
+\end{figure}
 
-My list of books to read keeps expanding way quicker than I could
-possibly read them. The list of papers and articles to read is virtually
-endless. There are more podcasts on all of these topics than I could
-ever listen to. It truly is humbling. Further, Bitcoin is evolving and
-it's almost impossible to stay up-to-date with the accelerating rate of
-innovation. The dust of the first layer hasn't even settled yet, and
-people have already built the second layer and are working on the third.
+Ma liste de livres à lire ne cesse de s'agrandir bien plus vite que je ne suis
+capable de la faire fondre. La liste de documents et d'articles à lire est
+virtuellement infinie. Il y a bien plus de podcasts sur tous ces sujets que je
+ne pourrais jamais en écouter. C'est réellement humiliant. En plus, Bitcoin
+continue d'évoluer et il est presque impossible de suivre le rythme de
+l'innovation qui s'accélère. La poussière soulevée par la première couche du
+réseau n'a même pas encore fini de retomber, que des gens ont déjà construit la
+seconde et travaillent sur la troisième.
 
-\paragraph{Bitcoin taught me that I know very little about almost anything. It
-taught me that this rabbit hole is bottomless.}
+\paragraph{Bitcoin m'a appris que je savais très peu sur presque tout. Il m'a
+appris que ce terrier de lapin n'avait pas de fond.}
 
 % ---
 %
