--- a/lessons/ch2-09-inflation.tex
+++ b/lessons/ch2-09-inflation.tex
@@ -1,162 +1,174 @@
-\chapter{Inflation}
+\chapter{L'inflation}
 \label{les:9}
 
-\begin{chapquote}{The Queen of Hearts} 
-\enquote{My dear, here we must run as fast as we can, just to stay in place. And if you
-wish to go anywhere you must run twice as fast as that.}
+\begin{chapquote}{La Reine Rouge} 
+\enquote{Ici, vois-tu, on est obligé de courir tant qu'on peut pour rester au
+même endroit. Si on veut aller ailleurs, il faut courir au moins deux fois plus
+vite que ça !}
 \end{chapquote}
 
-Trying to understand monetary inflation, and how a non-inflationary
-system like Bitcoin might change how we do things, was the starting
-point of my venture into economics. I knew that inflation was the rate
-at which new money was created, but I didn't know too much beyond that.
+Tenter de comprendre l'inflation monétaire et comment un système
+désinflationniste tel que Bitcoin pourrait changer nos comportements a constitué
+le début de ma plongée dans l'économie. Je savais que l'inflation était le taux
+auquel la monnaie était nouvellement émise, mais je n'en savais pas beaucoup
+plus que ça.
 
-While some economists argue that inflation is a good thing, others argue
-that \enquote{hard} money which can't be inflated easily --- as we had in the
-days of the gold standard --- is essential for a healthy economy.
-Bitcoin, having a fixed supply of 21 million, agrees with the latter
-camp.
+Tandis que certains économistes prétendent que l'inflation est bonne, d'autres
+prétendent qu'une monnaie \enquote{dure} qui ne peut être facilement produite
+--- comme nous avions durant la période de l'étalon-or --- est indispensable à
+une économie saine. Bitcoin, avec son offre fixe de 21 millions, partage l'avis
+du second camp.
 
-Usually, the effects of inflation are not immediately obvious. Depending
-on the inflation rate (as well as other factors) the time between cause
-and effect can be several years. Not only that, but inflation affects
-different groups of people more than others. As Henry Hazlitt points out
-in \textit{Economics in One Lesson}: \enquote{The art of economics consists in looking
-not merely at the immediate but at the longer effects of any act or
-policy; it consists in tracing the consequences of that policy not
-merely for one group but for all groups.}
+Habituellement, les effets de l'inflation ne sautent pas aux yeux. Selon le taux
+d'inflation (ainsi que d'autres facteurs), le délai entre la cause et la
+conséquence peut s'étendre sur plusieurs années. De plus, l'inflation touche
+certains catégories plus que d'autres. Comme Henry Hazlitt le fait remarquer
+dans \textit{L'Économie Politique en Une Leçon} : \enquote{L'art de la politique
+économique consiste à ne pas considérer uniquement l'aspect immédiat d'un
+problème ou d'un acte, mais à envisager ses effets plus lointains ; il consiste
+essentiellement à considérer les conséquences que cette politique peut avoir,
+non seulement sur un groupe d'hommes ou d'intérêts donnés, mais sur tous les
+groupes existants.}
 
-One of my personal lightbulb moments was the realization that issuing
-new currency --- printing more money --- is a \textit{completely} different
-economic activity than all the other economic activities. While real
-goods and real services produce real value for real people, printing
-money effectively does the opposite: it takes away value from everyone
-who holds the currency which is being inflated.
+L'une de mes révélations fut le moment où j'ai compris que l'émission monétaire
+--- imprimer plus d'argent --- était une activité économique \textit{totalement}
+différente de toutes les autres activités économiques. Pendant que les vrais
+biens et services produisent de la vraie valeur pour les vrais gens, imprimer
+plus d'argent a l'exact effet contraire : on retire de la valeur à tous ceux
+qui détiennent cette monnaie dont la quantité augmente.
 
 \begin{quotation}\begin{samepage}
-\enquote{Mere inflation --- that is, the mere issuance of more money, with the
-consequence of higher wages and prices --- may look like the creation
-of more demand. But in terms of the actual production and exchange of
-real things it is not.}
-\begin{flushright} -- Henry Hazlitt\footnote{Henry Hazlitt, \textit{Economics in One Lesson} \cite{hazlitt}}
+\enquote{L'inflation en soi --- c'est-à-dire la simple émission de plus de
+monnaie, avec pour conséquences la hausse des salaires et l'accroissement des
+prix --- peut très bien avoir l'air de créer une demande supplémentaire. Mais si
+on raisonne en termes de production et d'échange des biens réels, il n'en est
+rien.}
+\begin{flushright} -- Henry Hazlitt\footnote{Henry Hazlitt, \textit{L'Économie
+Politique en Une Leçon} \cite{hazlitt}}
 \end{flushright}\end{samepage}\end{quotation}
 
-The destructive force of inflation becomes obvious as soon as a little inflation
-turns into \textit{a lot}. If money hyperinflates things get ugly real
-quick.\footnote{\url{https://en.wikipedia.org/wiki/Hyperinflation}
-\cite{wiki:hyperinflation}} As the inflating currency falls apart, it will fail
-to store value over time and people will rush to get their hands on any goods
-which might do.
+La force destructrice de l'inflation devient évidente dès qu'un peu d'inflation
+se change en \textit{beaucoup}. Si la monnaie subit une hyperinflation, les
+choses tournent au vinaigre très rapidement
+\footnote{\url{https://en.wikipedia.org/wiki/Hyperinflation}\cite{wiki:hyperinflation}}.
+Au fur et à mesure qu'une monnaie se désagrège, elle échouera à stocker la
+valeur à travers le temps et les gens se précipiteront pour mettre la main sur
+n'importe quel bien qui pourra y parvenir.
 
 \paragraph{}
-Another consequence of hyperinflation is that all the money which people
-have saved over the course of their life will effectively vanish. The
-paper money in your wallet will still be there, of course. But it will
-be exactly that: worthless paper.
+Une autre conséquence de l'hyperinflation, c'est que tout l'argent épargné par
+les gens durant leur vie va littéralement s'évaporer. L'argent liquide qui se
+trouve dans votre portefeuille sera toujours là, bien entendu. Mais ça ne sera
+effectivement plus que ça : du papier sans valeur.
 
-\begin{center}
-  \includegraphics[width=\textwidth]{assets/images/children-playing-with-money.png}
-  \captionof{figure}{Hyperinflation in the Weimar Republic (1921-1923)}
+\begin{figure}
+  \includegraphics{assets/images/children-playing-with-money.png}
+  \caption{Hyperinflation pendant la République de Weimar (1921-1923)}
   \label{fig:children-playing-with-money}
-\end{center}
+\end{figure}
 
 \paragraph{}
-Money declines in value with so-called \enquote{mild} inflation as well. It
-just happens slowly enough that most people don't notice the diminishing
-of their purchasing power. And once the printing presses are running,
-currency can be easily inflated, and what used to be mild inflation
-might turn into a strong cup of inflation by the push of a button. As
-Friedrich Hayek pointed out in one of his essays, mild inflation usually
-leads to outright inflation.
+La monnaie perd également de la valeur avec une inflation soi-disant
+\enquote{modérée}. C'est juste qu'elle arrive suffisamment lentement pour que la
+plupart des gens ne s'aperçoivent pas de la baisse de leur pouvoir d'achat. Et
+dès lors que la planche à billets tourne, la quantité de monnaie peut être
+facilement accrue et ce qui était auparavant une inflation modérée peut se
+transformer par l'appui d'une simple bouton en une bonne dose d'inflation bien
+forte. Friedrich Hayek le faisait remarquer dans l'un de ses essais, l'inflation
+modérée mène généralement à l'inflation pure et simple.
 
 \begin{quotation}\begin{samepage}
-\enquote{`Mild' steady inflation cannot help --- it can lead only to outright
-inflation.}
-\begin{flushright} -- Friedrich Hayek\footnote{Friedrich Hayek, \textit{1980s
-Unemployment and the Unions} \cite{hayek-inflation}}
+\enquote{Une inflation `modérée' et stable ne peut pas nous aider --- cela peut
+seulement mener à l'inflation totale.}
+\begin{flushright} -- Friedrich Hayek\footnote{Friedrich Hayek, \textit{Le
+chômage des années 80 et les syndicats} \cite{hayek-inflation}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Inflation is particularly devious since it favors those who are closer
-to the printing presses. It takes time for the newly created money to
-circulate and prices to adjust, so if you are able to get your hands on
-more money before everyone else's devaluates you are ahead of the
-inflationary curve. This is also why inflation can be seen as a hidden
-tax because in the end governments profit from it while everyone else
-ends up paying the price.
+L'inflation est particulièrement sournoise, puisqu'elle favorise ceux qui sont
+au plus près du procédé d'émission. Il faut du temps pour que la monnaie
+nouvellement émise circule et que les prix s'ajustent. Donc si vous avez la
+possibilité de mettre la main sur plus d'argent avant que celui des autres ne se
+dévalue, vous avez de l'avance sur la courbe d'inflation. C'est aussi pour ça
+que l'on peut voir l'inflation comme un impôt caché, car au final ce sont les
+gouvernements qui en profitent tandis que tout le monde en paye le prix.
 
 \begin{quotation}\begin{samepage}
-\enquote{I do not think it is an exaggeration to say history is largely a
-history of inflation, and usually of inflations engineered by
-governments for the gain of governments.}
-\begin{flushright} -- Friedrich Hayek\footnote{Friedrich Hayek, \textit{Good Money} \cite{hayek-good-money}}
+\enquote{Je ne pense pas que cela soit une exagération de dire que l’Histoire
+est largement une histoire d’inflation, une inflation habituellement fabriquée
+par les gouvernements, pour le gain des gouvernements.}
+\begin{flushright} -- Friedrich Hayek\footnote{Friedrich Hayek, \textit{La Bonne
+Monnaie} \cite{hayek-good-money}}
 \end{flushright}\end{samepage}\end{quotation}
 
-\newpage
-
-So far, all government-controlled currencies have eventually been
-replaced or have collapsed completely. No matter how small the rate of
-inflation, \enquote{steady} growth is just another way of saying exponential
-growth. In nature as in economics, all systems which grow exponentially
-will eventually have to level off or suffer from catastrophic collapse.
+\paragraph{}
+Jusqu'à présent, les devises contrôlées par les gouvernements ont toutes fini
+par être remplacées ou s'effondrer totalement. Peu importe la faiblesse du taux
+d'inflation, parler de croissance \enquote{stable} revient à parler de
+croissance exponentielle. Dans la nature comme en économie, tous les systèmes
+qui se développent de façon exponentielle devront se stabiliser sous peine de
+subir un effondrement catastrophique.
 
 \paragraph{}
-\enquote{It can't happen in my country,} is what you're probably thinking. You don't
-think that if you are from Venezuela, which is currently suffering from
-hyperinflation. With an inflation rate of over 1 million percent, money is
-basically worthless. \cite{wiki:venezuela}
+\enquote{Ça ne peut pas arriver dans mon pays}, c'est probablement ce que vous
+vous dites. Ce n'est pas du tout ce que vous vous dites si vous vivez au
+Vénézuela, qui est en ce moment touché par l'hyperinflation. Avec un taux
+d'inflation supérieur à un million de pourcents, leur argent ne vaut plus rien.
+\cite{wiki:venezuela}
 
 \paragraph{}
-It might not happen in the next couple of years, or to the particular currency
-used in your country. But a glance at the list of historical
-currencies\footnote{See \textit{List of historical currencies} on Wikipedia.
-\cite{wiki:historical-currencies}} shows that it will inevitably happen over a
-long enough period of time. I remember and used plenty of those listed: the
-Austrian schilling, the German mark, the Italian lira, the French franc, the
-Irish pound, the Croatian dinar, etc. My grandma even used the Austro-Hungarian
-Krone. As time moves on, the currencies currently in use\footnote{See
-\textit{List of currencies} on Wikipedia \cite{wiki:list-of-currencies}} will
-slowly but surely move to their respective graveyards. They will hyperinflate or
-be replaced. They will soon be historical currencies. We will make them
-obsolete.
+Ça pourrait encore prendre plusieurs années, ou ne pas toucher votre devise.
+Mais il suffit de jeter un coup d'œil à la liste des anciennes
+monnaies\footnote{Voir \textit{Liste des anciennes monnaies} sur Wikipedia.
+\cite{wiki:historical-currencies}} pour voir que cela se produit invariablement,
+au cours d'un temps suffisamment long. Je me souviens avoir réellement utilisé
+toutes celles-ci : le schilling autrichien, le Deutsche mark, la lire italienne,
+le franc français, la livre irlandaise, le dinar croate, etc. Ma grand-mère a
+même utilisé la couronne austro-hongroise. Au fil du temps, les monnaies en
+circulation\footnote{Voir \textit{Liste des monnaies en circulation} sur
+Wikipedia \cite{wiki:list-of-currencies}} vont lentement mais sûrement se
+diriger vers leurs cimetières respectifs. Elles subiront une hyperinflation ou
+seront remplacées. Elles seront bientôt des monnaies anciennes. Nous les
+rendrons obsolètes.
 
 \begin{quotation}\begin{samepage}
-\enquote{History has shown that governments will inevitably succumb to the
-temptation of inflating the money supply.}
-\begin{flushright} -- Saifedean Ammous\footnote{Saifedean Ammous, \textit{The Bitcoin
-Standard} \cite{bitcoin-standard}}
+\enquote{L'Histoire a montré que les gouvernements cèdent immanquablement à la
+tentation de gonfler l'offre de monnaie.}
+\begin{flushright} -- Saifedean Ammous\footnote{Saifedean Ammous,
+\textit{L'Étalon Bitcoin} \cite{bitcoin-standard}}
 \end{flushright}\end{samepage}\end{quotation}
 
-\newpage
+\paragraph{}
+Pourquoi Bitcoin est-il différent ? Contrairement aux monnaies imposées par les
+états, les biens monétaires qui ne sont pas réglementés par des gouvernements,
+mais par les lois de la physique\footnote{Gigi, \textit{La consommation
+énergétique de Bitcoin - Une nouvelle perspective} \cite{gigi:energy}}, ont une
+tendance à la survie et même à maintenir leur valeur au fil du temps. Jusqu'à
+présent, le meilleur exemple est l'or qui, comme l'atteste le bien nommé
+\textit{rapport or sur costume correct}\footnote{L'Histoire montre que le prix
+d'une once d'or est égal au prix d'un costume pour homme de bonne facture, selon
+le cabinet de conseil en investissement
+Sionna\cite{web:gold-to-decent-suite-ratio}}, conserve sa valeur sur des
+centaines et même des milliers d'années. Il n'est peut-être pas parfaitement
+\enquote{stable} --- un concept discutable dès le départ --- mais la valeur
+qu'il renferme reste au moins dans les mêmes ordres de grandeur.
 
-Why is Bitcoin different? In contrast to currencies mandated by the government,
-monetary goods which are not regulated by governments, but by the laws of
-physics\footnote{Gigi, \textit{Bitcoin's Energy Consumption - A shift in
-perspective} \cite{gigi:energy}}, tend to survive and even hold their respective
-value over time. The best example of this so far is gold, which, as the
-aptly-named \textit{Gold-to-Decent-Suit Ratio}\footnote{History shows that the
-price of an ounce of gold equals the price of a decent men's suit, according to Sionna
-investment managers \cite{web:gold-to-decent-suite-ratio}} shows, is holding its
-value over hundreds and even thousands of years. It might not be perfectly
-\enquote{stable} --- a questionable concept in the first place --- but the value it
-holds will at least be in the same order of magnitude.
-
-If a monetary good or currency holds its value well over time and space,
-it is considered to be \textit{hard}. If it can't hold its value, because it
-easily deteriorates or inflates, it is considered a \textit{soft} currency. The
-concept of hardness is essential to understand Bitcoin and is worthy of
-a more thorough examination. We will return to it in the last economic
-lesson: sound money.
+Lorsqu'un bien monétaire ou une devise conserve efficacement sa valeur à travers
+le temps et l'espace, il est perçu comme \textit{fort}. Si à l'inverse il ne
+peut la maintenir, parce qu'il s'abîme ou gonfle facilement son offre, il est
+considéré comme \textit{faible}. Le concept de dureté est essentiel à la
+compréhension de Bitcoin et mérite un examen détaillé. Nous y reviendrons dans
+la dernière leçon sur l'économie : la monnaie saine.
 
 \paragraph{}
-As more and more countries suffer from
-hyperinflation more and more people will have to face the reality
-of hard and soft money. If we are lucky, maybe even some central bankers will be
-forced to re-evaluate their monetary policies. Whatever might happen, the
-insights I have gained thanks to Bitcoin will probably be invaluable, no matter
-the outcome.
+Alors que de plus en plus de pays souffrent d'hyperinflation, de plus en plus de
+gens devront affronter la réalité des monnaies fortes et faibles. Si nous avons
+de la chance, il se peut même que certaines banques centrales se trouvent
+forcées de réévaluer leurs politiques monétaires. Quoi qu'il arrive, la lucidité
+que m'a procuré Bitcoin s'avérera sans doute inestimable, quelle que soit
+l'issue.
 
-\paragraph{Bitcoin taught me about the hidden tax of inflation and the catastrophe
-of hyperinflation.}
+\paragraph{Bitcoin m'a appris que l'inflation était un impôt caché et que
+l'hyperinflation était une catastrophe.}
 
 % ---
 %
