--- a/lessons/ch2-13-fractional-reserve-insanity.tex
+++ b/lessons/ch2-13-fractional-reserve-insanity.tex
@@ -1,124 +1,131 @@
-\chapter{Fractional Reserve Insanity}
+\chapter{La folie des réserves fractionnaires}
 \label{les:13}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-Alas! it was too late: she went on growing and growing, and very soon had to
-kneel down: in another minute there was not room even for this, and she tried
-the effect of lying down, with one elbow against the door, and the other arm
-curled round her head. Still she went on growing, and as a last resource she put
-one arm out of the window, and one foot up the chimney, and said to herself
-\enquote{now I can do no more—what will become of me?}
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+Hélas ! les regrets étaient inutiles ! Elle continuait à grandir sans arrêt, et,
+bientôt, elle fût obligée de s’agenouiller sur le plancher : une minute plus
+tard, elle n’avait même plus assez de place pour rester à genoux, et elle
+essayait de voir si elle serait mieux en se couchant, un coude contre la porte,
+son autre bras replié sur la tête. Puis, comme elle ne cessait toujours pas de
+grandir, elle passa un bras par la fenêtre, mit un pied dans la cheminée, et se
+dit : \enquote{À présent je ne peux pas faire plus, quoi qu’il arrive. Que
+vais-je devenir ?}
 \end{chapquote}
 
-Value and money aren't trivial topics, especially in today's times. The
-process of money creation in our banking system is equally non-trivial,
-and I can't shake the feeling that this is deliberately so. What I have
-previously only encountered in academia and legal texts seems to be
-common practice in the financial world as well: nothing is explained in
-simple terms, not because it is truly complex, but because the truth is
-hidden behind layers and layers of jargon and \textit{apparent} complexity.
-\enquote{Expansionary monetary policy, quantitative easing, fiscal stimulus to
-the economy.} The audience nods along in agreement, hypnotized by the
-fancy words.
+La valeur et la monnaie ne sont pas des sujets simples, particulièrement de nos
+jours. Le processus d'émission monétaire du système bancaire ne l'est pas plus
+et je ne peux m'empêcher de croire que c'est délibéré. Ce phénomène, que je
+n'avais jusqu'à présent rencontré que dans les papiers de recherche et les
+documents légaux, semble également courant dans les milieux financiers : rien
+n'est expliqué de façon simple, non pas parce que c'est réellement complexe,
+mais parce que la vérité est dissimulée sous des couches et des couches de
+jargon d'une complexité \textit{apparente}. \enquote{Politique monétaire
+expansionniste, assouplissement quantitatif, relance fiscale de l'économie}. Le
+public hoche de la tête, hypnotisé par les mots savants.
 
-Fractional reserve banking and quantitative easing are two of those
-fancy words, obfuscating what is really happening by masking it as
-complex and difficult to understand. If you would explain them to a
-five-year-old, the insanity of both will become apparent quickly.
+Les banques à réserve fractionnaire et l'assouplissement quantitatif sont
+justement deux de ces mots sophistiqués, dissimulant la réalité des choses en la
+présentant comme complexe et difficile à comprendre. Si vous deviez expliquer ça
+à un enfant, vous verriez rapidement la folie qu'ils renferment.
 
-Godfrey Bloom, addressing the European Parliament during a joint
-debate, said it way better than I ever could:
+Godfrey Bloom l'a exprimé bien mieux que je ne pourrai jamais le faire, en
+s'adressant au Parlement Européen lors d'un débat commun :
 
 \begin{quotation}\begin{samepage}
-\enquote{[...] you do not really understand the concept of banking. All the
-banks are broke. Bank Santander, Deutsche Bank, Royal Bank of
-Scotland --- they're all broke! And why are they broke? It isn't an
-act of God. It isn't some sort of tsunami. They're broke because we
-have a system called `fractional reserve banking' which means that
-banks can lend money that they don't actually have! It's a criminal
-scandal and it's been going on for too long. [...]
-We have counterfeiting --- sometimes called quantitative
-easing --- but counterfeiting by any other name. The artificial
-printing of money which, if any ordinary person did, they'd go to
-prison for a very long time [...] and until we start sending
-bankers --- and I include central bankers and politicians --- to
-prison for this outrage it will continue.}
-\begin{flushright} -- Godfrey Bloom\footnote{Joint debate on the
-banking union~\cite{godfrey-bloom}}
+\enquote{[...] vous ne comprenez pas vraiment le concept de banque. Toutes les
+banques sont fauchées. La Santander, la Deutsche Bank, la Royal Bank of Scotland
+--- elles sont toutes fauchées ! Et pourquoi elles sont fauchées ? Ce
+n'est pas une volonté divine. Ce n'est pas une espèce de tsunami. Elles sont
+fauchées parce qu'elles ont un système appelé `réserves fractionnaires' qui leur
+permet de prêter de l'argent qu'elles n'ont même pas ! C'est un scandale
+orchestré par des malfaiteurs et ça fait trop longtemps que ça dure. [...] Il y
+a de la contrefaçon --- qu'on appelle parfois assouplissement quantitatif ---
+mais ça reste de la contrefaçon sous un autre nom. La création monétaire
+artificielle coûterait au simple quidam un long moment derrière les barreaux
+[...] et tant que l'on n'enverra pas les banquiers --- et j'inclus ici les
+banquiers centraux et les politiques --- en prison pour ce scandale cela
+continuera.}
+\begin{flushright} -- Godfrey Bloom\footnote{Débat commun sur l'union
+bancaire~\cite{godfrey-bloom}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Let me repeat the most important part: banks can lend money that they
-don't actually have.
+Permettez-moi de répéter le passage essentiel : les banques peuvent prêter de
+l'argent qu'elles ne possèdent pas.
 
-Thanks to fractional reserve banking, a bank only has to keep a small
-\textit{fraction} of every dollar it gets. It's somewhere between $0$ and $10\%$,
-usually at the lower end, which makes things even worse.
+Grâce au système de réserve fractionnaire, une banque a besoin de ne garder
+qu'une \textit{fraction} de chaque dollar qu'elle reçoit. Ça se situe quelque
+part entre $0$ et $10\%$, plutôt vers la limite inférieure d'ailleurs, ce qui
+n'arrange rien.
 
-Let's use a concrete example to better understand this crazy idea: A
-fraction of $10\%$ will do the trick and we should be able to do all the
-calculations in our head. Win-win. So, if you take \$100 to a
-bank --- because you don't want to store it under your mattress --- they
-only have to keep the agreed upon \textit{fraction} of it. In our example that
-would be \$10, because 10\% of \$100 is \$10. Easy, right?
+Prenons un exemple concret afin de mieux illustrer cette idée insensée : une
+fraction de $10\%$ fera l'affaire et nous devrions pouvoir calculer de tête. 
+Avantageux pour tout le monde. Donc, si vous déposez 100\$ à la banque ---
+parce que vous n'avez pas envie de les garder sous votre matelas --- celle-ci
+n'a besoin de garder que la \textit{fraction} consentie. Dans notre exemple,
+cela fait 10\$, car 10\% de 100\$ font 10\$. Simple, non ?
 
-So what do banks do with the rest of the money? What happens to your \$90? They
-do what banks do, they lend it to other people. The result is a money multiplier
-effect, which increases the money supply in the economy enormously
-(Figure~\ref{fig:money-multiplier}). Your initial deposit of \$100 will soon
-turn into \$190. By lending a 90\% fraction of the newly created \$90, there
-will soon be \$271 in the economy. And \$343.90 after that. The money supply is
-recursively increasing, since banks are literally lending money they don't
-have~\cite{wiki:money-multiplier}. Without a single Abracadabra, banks magically
-transform \$100 into one thousand dollars or more. Turns out 10x is easy. It
-only takes a couple of lending rounds.
+Mais alors que font les banques avec le reste de l'argent ? Qu'arrive-t-il aux
+90\$ restants ? Elles font ce que les banques savent faire, elles les prêtent à
+d'autres. Cela produit un effet multiplicateur sur la monnaie, qui accroît
+énormément son offre dans l'économie (Figure~\ref{fig:money-multiplier}). Votre
+dépôt initial de 100\$ se transforme rapidement en 190\$. En prêtant 90\% de ces
+90\$ fraîchement créés, cela fera bientôt 271\$ dans l'économie. Et 343,90\$
+après ça. L'offre de monnaie gonfle de façon récursive, puisque les banques
+prêtent littéralement de l'argent qu'elles n'ont
+pas~\cite{wiki:money-multiplier}. Sans la moindre formule, les banques changent
+100\$ en plus d'un milier, comme par magie. Il s'avère qu'il est simple
+d'arriver à un facteur 10. Ça prend seulement quelques cycles de prêt.
 
-\begin{center}
+\begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{assets/images/money-multiplier.png}
-  \captionof{figure}{The money multiplier effect}
+  \includegraphics{assets/images/money-multiplier.png}
+  \caption{L'effet multiplicateur sur la monnaie}
   \label{fig:money-multiplier}
-\end{center}
+\end{figure}
 
 \paragraph{}
-Don't get me wrong: There is nothing wrong with lending. There is
-nothing wrong with interest. There isn't even anything wrong with good
-old regular banks to store your wealth somewhere more secure than in
-your sock drawer.
+Ne vous méprenez pas : il n'y a rien de mal à prêter. Il n'y a rien de mal à
+percevoir des intérêts. Il n'y a même rien de mal avec cette bonne vieille
+banque qui garde votre patrimoine plus sûrement que dans votre tiroir à
+chaussettes.
 
-Central banks, however, are a different beast. Abominations of financial
-regulation, half public half private, playing god with something which
-affects everyone who is part of our global civilization, without a
-conscience, only interested in the immediate future, and seemingly
-without any accountability or auditability (see Figure~\ref{fig:bsg}).
+Les banques centrales sont une toute autre affaire, en revanche. Elles sont les
+abominations de la régulation financière, mi-publiques mi-privées, jouant à Dieu
+avec des choses qui impactent tout membre de la civilisation mondiale, sans
+morale, avec pour seul intérêt le futur à court terme et apparemment aucune
+responsabilité ni vérifiabilité (voir la Figure~\ref{fig:bsg}).
 
-\begin{center}
+\begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{assets/images/bsg.jpg}
-  \captionof{figure}{Yellen is strongly opposed to audit the Fed, while Bitcoin Sign Guy is strongly in favor of buying bitcoin.}
+  \includegraphics{assets/images/bsg.jpg}
+  \caption{Yellen est fermement opposée à un audit de la réserve fédérale,
+  pendant que le gars au panneau Bitcoin soutient fermement l'achat de bitcoin.}
   \label{fig:bsg}
-\end{center}
+\end{figure}
 
-While Bitcoin is still inflationary, it will cease to be so rather soon.
-The strictly limited supply of 21 million bitcoins will eventually do
-away with inflation completely. We now have two monetary worlds: an
-inflationary one where money is printed arbitrarily, and the world of
-Bitcoin, where final supply is fixed and easily auditable for everyone.
-One is forced upon us by violence, the other can be joined by anyone who
-wishes to do so. No barriers to entry, no one to ask for permission.
-Voluntary participation. That is the beauty of Bitcoin.
+Bien que Bitcoin soit encore inflationniste, il cessera de l'être relativement
+rapidement. La limite stricte sur l'offre de 21 millions de bitcoins finira par
+éliminer totalement l'inflation. Nous avons maintenant deux mondes monétaires :
+l'un inflationniste où l'argent est créé arbitrairement et le monde de Bitcoin,
+où l'offre finale est fixe et facilement vérifiable par tout un chacun. L'un
+nous est imposé par la violence, l'autre peut être rejoint par quiconque le
+désire. Pas de barrière à l'entrée, personne à qui demander la permission. Une
+participation volontaire. Voilà la beauté de Bitcoin.
 
-I would argue that the argument between Keynesian\footnote{Theories according to
-John Maynard Keynes and his deciples~\cite{wiki:keynesian}} and
-Austrian\footnote{School of economic thought based on methodological
-individualism~\cite{wiki:austrian}} economists is no longer purely academical.
-Satoshi managed to build a system for value transfer on steroids, creating the
-soundest money which ever existed in the process. One way or another, more and
-more people will learn about the scam which is fractional reserve banking. If
-they come to similar conclusions as most Austrians and Bitcoiners, they might
-join the ever-growing internet of money. Nobody can stop them if they choose to
-do so.
+J'ajouterais que le débat entre les économistes Keynésiens\footnote{Les théories
+de John Maynard Keynes et ses adeptes~\cite{wiki:keynesian}} et l'école
+autrichienne\footnote{École de pensée économique basée sur l'individualisme
+méthodologique~\cite{wiki:austrian}} n'est plus seulement académique. Satoshi
+est parvenu à créer un système de transfert de valeur sous stéroïdes, inventant
+dans le même temps la monnaie la plus saine ayant jamais existé. D'une façon ou
+d'une autre, de plus en plus de gens prendront conscience de l'arnaque qu'est le
+système de réserve fractionnaire. S'ils en arrivent aux mêmes conclusions que la
+plupart des Bitcoiners et économistes de l'école autrichienne, ils pourraient
+rejoindre l'internet de l'argent, qui ne cesse de grandir. Personne ne peut les
+empêcher de faire ce choix.
 
-\paragraph{Bitcoin taught me that fractional reserve banking is pure insanity.}
+\paragraph{Bitcoin m'a appris que les réserves fractionnaires des banques
+n'étaient que pure folie.}
 
 % ---
 %
