--- a/lessons/ch3-19-privacy-is-not-dead.tex
+++ b/lessons/ch3-19-privacy-is-not-dead.tex
@@ -1,60 +1,63 @@
-\chapter{Privacy is Not Dead}
+\chapter{La vie privée n'est pas morte}
 \label{les:19}
 
 \begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-The players all played at once without waiting for turns, and quarrelled all
-the while at the tops of their voices, and in a very few minutes the Queen was
-in a furious passion, and went stamping about and shouting \enquote{off with his
-head!} of \enquote{off with her head!} about once in a minute.
+Les joueurs jouaient tous en même temps sans attendre leur tour ; ils se
+disputaient sans arrêt et s’arrachaient les hérissons. Au bout d’un instant, la
+Reine, entrant dans une furieuse colère, parcourut le terrain en tapant du pied
+et en criant : \enquote{Qu’on lui coupe la tête ! Qu’on lui coupe la tête !} à
+peu près une fois par minute.
 \end{chapquote}
 
-If pundits are to believed, privacy has been dead since the
-80ies\footnote{\url{https://bit.ly/privacy-is-dead}}. The pseudonymous invention
-of Bitcoin and other events in recent history show that this is not the case.
-Privacy is alive, even though it is by no means easy to escape the surveillance
-state.
+À en croire les experts, la vie privée est morte depuis les années
+80\footnote{\url{https://bit.ly/privacy-is-dead}}. L'invention pseudonyme de
+Bitcoin et d'autres événements de l'histoire récente montrent que ce n'est pas
+vrai. La vie privée est vivante, bien qu'il ne soit pas facile d'échapper à cet
+état de surveillance.
 
-Satoshi went through great lengths to cover up his tracks and conceal
-his identity. Ten years later, it is still unknown if Satoshi Nakamoto
-was a single person, a group of people, male, female, or a
-time-traveling AI which bootstrapped itself to take over the world.
-Conspiracy theories aside, Satoshi chose to identify himself to be a
-Japanese male, which is why I don't assume but respect his chosen gender
-and refer to him as \textit{he}.
+Satoshi a pris d'infinies précautions afin de se couvrir et de dissimuler son
+identité. Dix ans plus tard, personne ne peut dire si Satoshi Nakamoto était une
+personne ou un groupe, un homme, une femme ou un intelligence artificielle venue
+du futur pour s'auto-amorcer afin de régner sur le monde. Théories complotistes
+mises à part, Satoshi a choisi de s'identifier à un homme japonais, c'est
+pourquoi je ne présume de rien en respectant son choix de genre et en le
+désignant par \textit{il}.
 
-\begin{center}
-  \includegraphics[width=\textwidth]{assets/images/nope.png}
-  \captionof{figure}{I am not Dorian Nakamoto.}
+\begin{figure}
+  \includegraphics{assets/images/nope.png}
+  \caption{Je ne suis pas Dorian Nakamoto.}
   \label{fig:nope}
-\end{center}
+\end{figure}
 
-Whatever his real identity might be, Satoshi was successful in hiding
-it. He set an encouraging example for everyone who wishes to remain
-anonymous: it is possible to have privacy online.
+Quelle que soit sa vraie identité, Satoshi a réussi à la cacher. Il a créé un
+précédent encourageant pour tous ceux qui désirent rester anonymes : c'est
+possible d'avoir une vie privée en ligne.
 
 \begin{quotation}\begin{samepage}
-\enquote{Encryption works. Properly implemented strong crypto systems are one
-of the few things that you can rely on.}
-\begin{flushright} -- Edward Snowden\footnote{Edward Snowden, answers to reader questions \cite{snowden}}
+\enquote{Le chiffrement fonctionne. Les systèmes crypto robustes et correctement
+implémentés sont l'une des rares choses sur lesquelles vous pouvez compter.}
+\begin{flushright} -- Edward Snowden\footnote{Edward Snowden, réponses au
+courrier des lecteurs \cite{snowden}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Satoshi wasn't the first pseudonymous or anonymous inventor, and he won't be the
-last. Some have directly imitated this pseudonymous publication style, like Tom
-Elvis Yedusor of MimbleWimble~\cite{mimblewimble-origin} fame, while others have
-published advanced mathematical proofs while remaining completely
-anonymous~\cite{4chan-math}.
+Satoshi n'est pas le premier inventeur pseudonyme ou anonyme et ne sera pas le
+dernier. Certains ont directement repris son style de publication pseudonyme,
+comme Tom Elvis Jedusor, connu pour MimbleWimble~\cite{mimblewimble-origin},
+quand d'autres ont publié des preuves mathématiques avancées en restant
+totalement anonymes~\cite{4chan-math}.
 
-It is a strange new world we are living in. A world where identity is
-optional, contributions are accepted based on merit, and people can
-collaborate and transact freely. It will take some adjustment to get
-comfortable with these new paradigms, but I strongly believe that all of
-this has the potential to change the world for the better.
+C'est un nouveau monde étrange que nous habitons. Un monde où l'identité est
+facultative, où les contributions sont acceptées sur la base du mérite et où les
+gens peuvent collaborer et négocier librement. Il faudra quelques ajustements
+pour être à l'aise avec ces nouveaux paradigmes, mais je crois fermement que
+tout ceci a le potentiel pour rendre le monde meilleur.
 
-We should all remember that privacy is a fundamental human right\footnote{Universal Declaration of Human Rights, \textit{Article 12}.~\cite{article12}}. And as long
-as people exercise and defend these rights the battle for privacy is far from
-over.
+Chacun d'entre nous devrait se souvenir que la vie privée est un droit humain
+fondamental\footnote{Déclaration universelle des Droits de l'Homme,
+\textit{Article 12}.~\cite{article12}}. Tant que le peuple exercera et défendra
+ces droits, la bataille pour la vie privée sera loin d'être achevée.
 
-\paragraph{Bitcoin taught me that privacy is not dead.}
+\paragraph{Bitcoin m'a appris que la vie privée n'était pas morte.}
 
 % ---
 %
