--- a/lessons/ch3-21-metaphors-for-bitcoins-future.tex
+++ b/lessons/ch3-21-metaphors-for-bitcoins-future.tex
@@ -1,167 +1,170 @@
-\chapter{Metaphors for Bitcoin's Future}
+\chapter{Métaphores pour le futur de Bitcoin}
 \label{les:21}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-\enquote{I know something interesting is sure to happen\ldots}
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+\enquote{Je sais qu’il arrive toujours quelque chose d’intéressant\ldots}
 \end{chapquote}
 
-In the last couple of decades, it became apparent that technological
-innovation does not follow a linear trend. Whether you believe in the
-technological singularity or not, it is undeniable that progress is
-exponential in many fields. Not only that, but the rate at which
-technologies are being adopted is accelerating, and before you know it
-the bush in the local schoolyard is gone and your kids are using
-Snapchat instead. Exponential curves have the tendency to slap you in
-the face way before you see them coming.
+Au cours des deux dernières décennies, il est devenu évident que l'innovation
+technologique ne suivait pas une courbe linéaire. Que vous croyiez ou pas à la
+singularité technologique, le progrès est indéniablement exponentiel dans de
+nombreux domaines. En plus de ça, le taux d'adoption des technologies s'accélère
+et sans vous en rendre compte, le buisson de la cour d'école du coin a disparu
+car vos enfants utilisent Snapchat à la place. Les courbes exponentielles ont
+cette tendance à vous exploser au visage bien avant que vous ne l'ayez vu venir.
 
-Bitcoin is an exponential technology built upon exponential technologies.
-\textit{Our World in Data}\footnote{\url{https://ourworldindata.org/}}
-beautifully shows the rising speed of technological adoption, starting in 1903
-with the introduction of landlines (see Figure~\ref{fig:tech-adoption}).
-Landlines, electricity, computers, the internet, smartphones; all follow
-exponential trends in price-performance and adoption. Bitcoin does
-too~\cite{tech-adoption}.
+Bitcoin est une technologie exponentielle reposant sur d'autres technologies
+exponentielles. \textit{Our World in
+Data}\footnote{\url{https://ourworldindata.org/}} montre admirablement la
+vitesse croissante de l'adoption technologique à partir de 1903 avec l'arrivée
+des lignes téléphoniques (voir la Figure\ref{fig:tech-adoption}). Les lignes
+téléphoniques, l'électricité, les ordinateurs, Internet, les smartphones ; tous
+observent des tendances exponentielles en termes de qualité-prix et d'adoption.
+C'est pareil pour Bitcoin~\cite{tech-adoption}.
 
-\begin{center}
-  \includegraphics[width=\textwidth]{assets/images/tech-adoption.png}
-  \captionof{figure}{Bitcoin is literally off the charts.}
+\begin{figure}
+  \includegraphics{assets/images/tech-adoption.png}
+  \caption{Bitcoin est littéralement hors-normes.}
   \label{fig:tech-adoption}
-\end{center}
+\end{figure}
 
-Bitcoin has not one but multiple network effects\footnote{Trace Mayer,
-\textit{The Seven Network Effects of Bitcoin}~\cite{7-network-effects}}, all of
-which resulting in exponential growth patterns in their respective area: price,
-users, security, developers, market share, and adoption as global money.
+Bitcoin possède de multiples effets de réseau\footnote{Trace Mayer, \textit{Les
+sept effets de réseau de Bitcoin}~\cite{7-network-effects}} découlant tous de
+configurations de croissance exponentielle dans leurs propres domaines : le
+prix, les usagers, la sécurité, les développeurs, la part de marché et
+l'adoption comme monnaie globale.
 
-Having survived its infancy, Bitcoin is continuing to grow every day in
-more aspects than one. Granted, the technology has not reached maturity
-yet. It might be in its adolescence. But if the technology is
-exponential, the path from obscurity to ubiquity is short.
+En ayant survécu à ses premiers pas, Bitcoin continue de grandir chaque jour
+dans plus d'un aspect. D'accord, sa technologie n'est pas encore mature. Il est
+sans doute en pleine adolescence. Mais si la technologie est exponentielle,
+passer de l'ombre à l'omniprésence sera un court chemin.
 
-\begin{center}
-  \includegraphics[width=\textwidth]{assets/images/mobile-phone.png}
-  \captionof{figure}{Mobile phone, ca 1965 vs 2019.}
+\begin{figure}
+  \includegraphics{assets/images/mobile-phone.png}
+  \caption{Le téléphone mobile, env. 1965 contre 2019.}
   \label{fig:mobile-phone}
-\end{center}
+\end{figure}
 
-In his 2003 TED talk, Jeff Bezos chose to use electricity as a metaphor for the
-web's future.\footnote{\url{http://bit.ly/bezos-web}} All three phenomena ---
-electricity, the internet, Bitcoin --- are \textit{enabling} technologies,
-networks which enable other things. They are infrastructure to be built upon,
-foundational in nature.
+Dans sa conférence TED de 2003, Jeff Bezos a choisi l'électricité comme
+métaphore au futur du web\footnote{\url{http://bit.ly/bezos-web}}. Ces trois
+phénomènes --- l'électricité, Internet, Bitcoin --- sont des technologies
+\textit{habilitantes}, des réseaux qui facilitent autre chose. Ce sont des
+infrastructures fondamentales, qui permettent de bâtir.
 
-Electricity has been around for a while now. We take it for granted. The
-internet is quite a bit younger, but most people already take it for
-granted as well. Bitcoin is ten years old and has entered public
-consciousness during the last hype cycle. Only the earliest of adopters
-take it for granted. As more time passes, more and more people will
-recognize Bitcoin as something which simply is.\footnote{This is known as the
-\textit{Lindy Effect}. The Lindy effect is a theory that the future life expectancy
-of some non-perishable things like a technology or an idea is proportional to
-their current age, so that every additional period of survival implies a longer
-remaining life expectancy.~\cite{wiki:lindy}}
+Ça fait un moment que nous côtoyons l'électricité. On la prend pour acquise.
+Internet est un peu plus jeune mais la plupart des gens le prennent aussi pour
+acquis. Bitcoin a dix ans et n'a pénétré les consciences que durant le dernier
+cycle d'engouement. Seuls les pionniers le prennent pour acquis. Plus le temps
+passera, plus les gens verront Bitcoin comme une chose banale\footnote{Ceci est
+connu sous le nom d'\textit{effet Lindy}. L'effet Lindy est la théorie selon
+laquelle l'espérance de vie future d'une chose non périssable est
+proportionnelle à son âge actuel, impliquant une espérance de vie restante plus
+longue à chaque fois qu'elle survit à une période de temps.~\cite{wiki:lindy}}. 
 
-In 1994, the internet was still confusing and unintuitive. Watching this old
-recording of the \textit{Today
-Show}\footnote{\url{https://youtu.be/UlJku_CSyNg}} makes it obvious that what
-feels natural and intuitive now actually wasn't back then. Bitcoin is still
-confusing and alien to most, but just like the internet is second nature for
-digital natives, spending and stacking
-sats\footnote{\url{https://twitter.com/hashtag/stackingsats}} will be second
-nature to the bitcoin natives of the future.
+En 1994, Internet était encore déroutant et contre-intuitif. Il suffit de
+regarder ce vieil enregistrement du \textit{Today
+Show}\footnote{\url{https://youtu.be/UlJku_CSyNg}} pour voir qu'à l'évidence, ce
+qui nous paraît naturel et intuitif aujourd'hui ne l'était en fait pas à
+l'époque. Pour la plupart, Bitcoin reste encore déroutant et étrange, mais tout
+comme Internet est une seconde nature pour les natifs du numérique, dépenser et
+accumuler des sats\footnote{\url{https://twitter.com/hashtag/stackingsats}} le
+sera pour les natifs du Bitcoin dans le futur.
 
 \begin{quotation}\begin{samepage}
-\enquote{The future is already here --- it's just not very evenly
-distributed.}
-\begin{flushright} -- William Gibson\footnote{William Gibson, \textit{The Science in Science Fiction} \cite{william-gibson}}
+\enquote{Le futur est déjà là --- il n’est simplement pas réparti
+équitablement.}
+\begin{flushright} -- William Gibson\footnote{William Gibson, \textit{La science
+dans la science-fiction} \cite{william-gibson}}
 \end{flushright}\end{samepage}\end{quotation}
 
-In 1995, about $15\%$ of American adults used the internet. Historical
-data from the Pew Research Center~\cite{pew-research} shows how the internet has woven
-itself into all our lives. According to a consumer survey by Kaspersky
-Lab~\cite{web:kaspersky}, 13\% of respondents have used Bitcoin and its clones to pay for
-goods in 2018. While payments aren't the only use-case of bitcoin, it is
-some indication of where we are in Internet time: in the early- to
-mid-90s.
+En 1995, environ $15\%$ des adultes américains utilisaient Internet. Les données
+historiques du centre de recherches Pew~\cite{pew-research} montrent à quel
+point Internet s'est immiscé dans nos vies. Selon un sondage client de Kaspersky
+Lab~\cite{web:kaspersky}, $13\%$ des personnes interrogées se sont servi de
+Bitcoin ou de ses clones pour payer un bien en 2018. Bien que les paiements ne
+soient pas l'unique cas d'usage de Bitcoin, cela donne une idée d'où nous en
+sommes en temps Internet : dans la première moitié des années 90.
 
-In 1997, Jeff Bezos stated in a letter to shareholders~\cite{bezos-letter} that
-\enquote{this is Day 1 for the Internet,} recognizing the great untapped
-potential for the internet and, by extension, his company. Whatever day this is
-for Bitcoin, the vast amounts of untapped potential are clear to all but the
-most casual observer.
+En 1997, Jeff Bezos écrivait à ses actionnaires~\cite{bezos-letter}
+\enquote{c'est le premier jour d'Internet}, pressentant son gigantesque
+potentiel inexploité et, par extension, celui de son entreprise. Peu importe à
+quel jour se trouve Bitcoin, seul l'observateur inattentif ne voit pas
+clairement les immenses volumes de potentiel inexploité.
 
-\begin{center}
-  \includegraphics[width=\textwidth]{assets/images/internet-evolution-white-dates.png}
-  \captionof{figure}{The internet, 1982 vs 2005. Source: cc-by Merit Network, Inc. and Barrett Lyon, Opte Project}
+\begin{figure}
+  \includegraphics{assets/images/internet-evolution-white-dates.png}
+  \caption{Internet, 1982 vs. 2005. Source : CC-BY Merit Network, Inc. et
+  Barrett Lyon, Opte Project}
   \label{fig:internet-evolution-white-dates}
-\end{center}
+\end{figure}
 
-Bitcoin's first node went online in 2009 after Satoshi mined the \textit{genesis
-block}\footnote{The genesis block is the first block of the Bitcoin block chain.
-Modern versions of Bitcoin number it as block $0$, though very early versions
-counted it as block $1$. The genesis block is usually hardcoded into the
-software of the applications that utilize the Bitcoin block chain. It is a
-special case in that it does not reference a previous block and produces an
-unspendable subsidy. The \textit{coinbase} parameter contains, along with the
-normal data, the following text: \textit{\enquote{The Times 03/Jan/2009 Chancellor on
-brink of second bailout for banks}} \cite{btcwiki:genesis-block}} and released
-the software into the wild. His node wasn't alone for long. Hal Finney was one
-of the first people to pick up on the idea and join the network. Ten years
-later, as of this writing, more than
-$75.000$\footnote{\url{https://bit.ly/luke-nodecount}} nodes are running
-bitcoin.
+Le premier nœud Bitcoin fut mis en ligne en 2009 après que Satoshi mina le
+\textit{bloc de genèse}\footnote{Le bloc de genèse est le premier bloc de la
+chaîne de blocs Bitcoin. Les versions modernes de Bitcoin le numérotent $0$,
+alors que les anciennes versions le comptent comme le bloc $1$. Le bloc de
+genèse est habituellement codé en dur dans les applications qui se servent de la
+chaîne de blocs de Bitcoin. C'est un cas particulier car il ne référence pas de
+bloc précédent et produit une récompense non-dépensable. Le paramètre
+\textit{coinbase} contient, entres autres données normales, le texte suivant :
+\textit{\enquote{The Times 03/Jan/2009 Chancellor on brink of second bailout for
+banks}} \cite{btcwiki:genesis-block}} et libéra le logiciel dans la nature. Son
+nœud ne fut pas seul très longtemps. Hal Finney fut l'un des premiers à
+accrocher à l'idée et à rejoindre le réseau. Dix ans plus tard, au moment où
+j'écris ceci, il y a plus de $75 000$ nœuds qui exécutent bitcoin.
 
-\begin{center}
+\begin{figure}
   \centering
   \includegraphics[width=8cm]{assets/images/running-bitcoin.png}
-  \captionof{figure}{Hal Finney authored the first tweet mentioning bitcoin in January 2009.}
+  \caption{Hal Finney est l'auteur du premier tweet à mentionner bitcoin en
+  janvier 2009.}
   \label{fig:running-bitcoin}
-\end{center}
+\end{figure}
 
-The protocol's base layer isn't the only thing growing exponentially.
-The lightning network, a second layer technology, is growing at an even
-faster rate.
+La couche de base du protocole n'est pas la seule à croître de façon
+exponentielle. Le réseau Lightning, une technologie de seconde couche, grandit
+encore plus vite.
 
-In January 2018, the lightning network had $40$ nodes and $60$
-channels~\cite{web:lightning-nodes}. In April 2019, the network grew to more
-than $4000$ nodes and around $40.000$ channels. Keep in mind that this is still
-experimental technology where loss of funds can and does occur. Yet the trend is
-clear: thousands of people are reckless and eager to use it.
+En janvier 2018, le réseau Lightning était composé de $40$ nœuds et $60$
+canaux~\cite{web:lightning-nodes}. En avril 2019, le réseau s'était étendu à
+plus de $4000$ nœuds et environ $40 000$ canaux. N'oubliez pas que ça reste une
+technologie expérimentale où la perte de fonds peut arriver et arrive parfois.
+Malgré ça, la tendance est limpide : des milliers de personnes téméraires sont
+enthousiastes à l'idée de s'en servir. 
 
-\begin{center}
-  \includegraphics[width=\textwidth]{assets/images/lnd-growth-lopp-white.png}
-  \captionof{figure}{Lightning Network, January 2018 vs December 2018. Source: Jameson Lopp}
+\begin{figure}
+  \includegraphics{assets/images/lnd-growth-lopp-white.png}
+  \caption{Le réseau Lightning, janvier 2018 vs. décembre 2018. Source : Jameson
+  Lopp}
   \label{fig:lnd-growth-lopp-white.png}
-\end{center}
+\end{figure}
 
-To me, having lived through the meteoric rise of the web, the parallels
-between the internet and Bitcoin are obvious. Both are networks, both
-are exponential technologies, and both enable new possibilities, new
-industries, new ways of life. Just like electricity was the best
-metaphor to understand where the internet is heading, the internet might
-be the best metaphor to understand where bitcoin is heading. Or, in the
-words of Andreas Antonopoulos, Bitcoin is \textit{The Internet of Money}.
-These metaphors are a great reminder that while history doesn't repeat
-itself, it often rhymes.
+À mon sens, ayant vécu l'essor météorique du web, les analogies entre Internet
+et Bitcoin sont évidentes. Ce sont tous deux des réseaux, des technologies
+exponentielles et tous deux amènent de nouvelles possibilités, de nouvelles
+industries, de nouveaux comportements. L'électricité est la meilleure métaphore
+pour comprendre la direction que prend Internet, il est donc possible
+qu'Internet soit la meilleure métaphore pour comprendre la direction que prend
+Bitcoin. Ou alors, pour reprendre les mots d'Andreas Antonopoulos, Bitcoin est
+l'\textit{Internet de l'argent}. Ces métaphores sont un très bon rappel d'une
+Histoire qui ne se répète pas mais qui rime souvent.
 
-Exponential technologies are hard to grasp and often underestimated.
-Even though I have a great interest in such technologies, I am
-constantly surprised by the pace of progress and innovation. Watching
-the Bitcoin ecosystem grow is like watching the rise of the internet in
-fast-forward. It is exhilarating.
+Les technologies exponentielles sont difficiles à appréhender et sont souvent
+sous-estimées. Même si je m'intéresse beaucoup à celles-ci, je suis sans cesse
+surpris de l'allure du progrès et de l'innovation. Observer la croissance de
+l'écosystème Bitcoin, ça ressemble à observer l'essor d'Internet, mais en
+accéléré. C'est grisant.
 
-My quest of trying to make sense of Bitcoin has led me down the pathways
-of history in more ways than one. Understanding ancient societal
-structures, past monies, and how communication networks evolved were all
-part of the journey. From the handaxe to the smartphone, technology has
-undoubtedly changed our world many times over. Networked technologies
-are especially transformational: writing, roads, electricity, the
-internet. All of them changed the world. Bitcoin has changed mine and
-will continue to change the minds and hearts of those who dare to use
-it.
+Ma quête de sens envers Bitcoin m'a mené plus d'une fois sur les chemins de
+l'Histoire. La compréhension des anciennes structures sociétales, des monnaies
+du passé et de comment les réseaux de communication ont évolué ont toutes fait
+partie du voyage. Du biface au smartphone, la technologie a sans nul doute
+changé notre monde à de nombreuses reprises. Les technologies de réseaux ont un
+caractère particulier de transformation : l'écriture, les routes, l'électricité,
+Internet. Toutes ont changé le monde. Bitcoin a changé le mien et continuera de
+transformer les esprits et les cœurs de ceux qui osent l'approcher.
 
-\paragraph{Bitcoin taught me that understanding the past is essential to
-understanding its future. A future which is just beginning\ldots}
+\paragraph{Bitcoin m'a appris que la compréhension du passé était nécessaire à
+la compréhension de son futur. Un futur qui ne fait que commencer\ldots}
 
 % ---
 %
