--- a/main.bib
+++ b/main.bib
@@ -25,6 +25,7 @@
 @misc{satoshi-set-in-stone,
 	author = "Satoshi Nakamoto",
 	month = "June",
+	publisher = "Bitcointalk Forum",
 	title = "Re: Transactions and Scripts: DUP HASH160 ... EQUALVERIFY CHECKSIG",
 	howpublished = "\url{https://bitcointalk.org/index.php?topic=195.msg1611\#msg1611}",
 	year = "2010"
@@ -239,7 +240,7 @@
   author = "{Wikipedia contributors}",
   title = "2013–present economic crisis in Venezuela --- {Wikipedia}{,} The Free Encyclopedia",
   year = "2019",
-  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=2013-present_economic_crisis_in_Venezuela&oldid=918242758}"
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=2013%E2%80%93present_economic_crisis_in_Venezuela&oldid=918242758}"
 }
 @misc{wiki:hyperinflation,
   author = "{Wikipedia contributors}",
@@ -279,7 +280,7 @@
 	isbn = "9780674991835",
 	publisher = "Harvard University Press",
 	title = "Plato in Twelve Volumes, Vol. 3. (Euthydemus section 304a/304b)",
-	address = "\url{http://www.perseus.tufts.edu/hopper/text?doc=Perseus\%3Atext\%3A1999.01.0178\%3Atext\%3DEuthyd.\%3Asection\%3D304a}",
+	address = "\url{http://www.perseus.tufts.edu/hopper/text?doc=Perseus%3Atext%3A1999.01.0178%3Atext%3DEuthyd.%3Asection%3D304a}",
 	year = "2017"
 }
 @misc{wiki:theory-of-value,
@@ -307,7 +308,7 @@
 	month = "February",
 	publisher = "P2PFoundation Forums",
 	title = "Bitcoin open source implementation of P2P currency",
-	howpublished = "\url{http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source?commentId=2003008\%3AComment\%3A9562}",
+	howpublished = "\url{http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source?commentId=2003008%3AComment%3A9562}",
 	year = "2009"
 }
 @book{end-the-fed,
@@ -442,7 +443,7 @@
 	month = "June",
 	publisher = "Bitcointalk Forum",
 	title = "Dealing with SHA-256 Collisions",
-	howpublished = "\url{https://bitcointalk.org/index.php?topic=191.msg1585\#msg1585}",
+	howpublished = "\url{https://bitcointalk.org/index.php?topic=191.msg1585#msg1585}",
 	year = "2010"
 }
 @book{bruce-schneier,
@@ -465,7 +466,7 @@
 	month = "May",
 	publisher = "Bitcointalk Forum",
 	title = "New bitcoin logo",
-	howpublished = "\url{https://bitcointalk.org/index.php?topic=4994.msg140770\#msg140770}",
+	howpublished = "\url{https://bitcointalk.org/index.php?topic=4994.msg140770#msg140770}",
 	year = "2011"
 }
 @misc{wiki:LGM,
@@ -490,7 +491,7 @@
   author = "{Wikipedia contributors}",
   title = "Landauer's principle --- {Wikipedia}{,} The Free Encyclopedia",
   year = "2019",
-  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Landauer's_principle&oldid=907333330}"
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Landauer%27s_principle&oldid=907333330}"
 }
 @misc{wiki:dyson,
   author = "{Wikipedia contributors}",
@@ -573,7 +574,7 @@
   author = "{Wikipedia contributors}",
   title = "Elliptic-curve cryptography --- {Wikipedia}{,} The Free Encyclopedia",
   year = "2019",
-  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Elliptic-curve_cryptography&oldid=916608234}"
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Elliptic-curve_cryptography&oldid=916608234#Backdoors}"
 }
 @misc{web:bootstrapping,
   author = "Guix Contributors",
@@ -606,20 +607,12 @@
 	howpublished = "\url{http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source}",
 	year = "2009"
 }
-@misc{satoshi-set-in-stone,
-	author = "Satoshi Nakamoto",
-	month = "June",
-	publisher = "Bitcointalk Forum",
-	title = "Re: Transactions and Scripts: DUP HASH160 ... EQUALVERIFY CHECKSIG",
-	howpublished = "\url{https://bitcointalk.org/index.php?topic=195.msg1611\#msg1611}",
-	year = "2010"
-}
 @misc{satoshi-open-source,
 	author = "Satoshi Nakamoto",
 	month = "December",
 	publisher = "Bitcointalk Forum",
 	title = "Re: Questions about Bitcoin",
-	howpublished = "\url{https://bitcointalk.org/index.php?topic=13.msg46\#msg46}",
+	howpublished = "\url{https://bitcointalk.org/index.php?topic=13.msg46#msg46}",
 	year = "2009"
 }
 @misc{btcwiki:p2sh,
@@ -662,8 +655,8 @@
   year = "2016",
   howpublished = "\url{https://github.com/mimblewimble/docs/wiki/MimbleWimble-Origin}"
 }
-@misc{4chan-math,
-	author = "{Anonymous 4chan Poster} and {Robin Houston} and {Jay Pantone} and {Vince Vatter}",
+@article{4chan-math,
+	author = "{Anonymous 4chan Poster, Robin Houston, Jay Pantone, and Vince Vatter}",
 	month = "October",
 	title = "A lower bound on the length of the shortest superpattern",
   howpublished = "\url{https://oeis.org/A180632/a180632.pdf}",
@@ -699,7 +692,7 @@
 	month = "June",
 	publisher = "BitcoinTalk Forum",
 	title = "Re: 0.3 almost ready",
-	howpublished = "\url{https://bitcointalk.org/index.php?topic=199.msg1670\#msg1670}",
+	howpublished = "\url{https://bitcointalk.org/index.php?topic=199.msg1670#msg1670}",
 	year = "2010"
 }
 
