--- a/lessons/ch3-15-strength-in-numbers.tex
+++ b/lessons/ch3-15-strength-in-numbers.tex
@@ -1,201 +1,216 @@
-\chapter{Strength in Numbers}
+\chapter{La force dans les nombres}
 \label{les:15}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-\enquote{Let me see: four times five is twelve, and four times six is thirteen, and
-four times seven is fourteen—oh dear! I shall never get to twenty at this
-rate!}
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+\enquote{Voyons un peu : quatre fois cinq font douze, quatre fois six font
+treize, et quatre fois sept font… Oh ! mon Dieu ! jamais je n’arriverai jusqu’à
+vingt à cette allure !}
 \end{chapquote}
 
-Numbers are an essential part of our everyday life. Large numbers,
-however, aren't something most of us are too familiar with. The largest
-numbers we might encounter in everyday life are in the range of
-millions, billions, or trillions. We might read about millions of people
-in poverty, billions of dollars spent on bank bailouts, and trillions of
-national debt. Even though it's hard to make sense of these headlines,
-we are somewhat comfortable with the size of those numbers.
+Les nombres sont indispensables à notre vie quotidienne. Les grands nombres, en
+revanche, sont peu familiers à la plupart d'entre nous. Les plus grands nombres
+que l'on rencontrera généralement au jour le jour seront de l'ordre des
+millions, des milliards voire des billions\footnote{NdT : \textit{billion} est
+la traduction de l'anglais \textit{trillion}.}. On pourra par exemple parler de
+millions de gens dans la misère, de milliards de dollars dépensés à renflouer
+les banques ou encore de billions de dette publique. Malgré la difficulté à se
+représenter ce genre de gros titres, nous sommes relativement à l'aise avec
+l'ordre de grandeur de ces nombres.
 
-Although we might seem comfortable with billions and trillions, our
-intuition already starts to fail with numbers of this magnitude. Do you
-have an intuition how long you would have to wait for a
-million/billion/trillion seconds to pass? If you are anything like me,
-you are lost without actually crunching the numbers.
+Même si nous sommes familiers avec les milliards et les billions, notre
+intuition fait déjà défaut face à leur magnitude. Avez-vous une idée du temps
+qu'il faut pour qu'un million, milliard ou billion de secondes ne s'écoulent ?
+Si vous êtes comme moi, vous êtes perdu si vous ne faites pas les calculs.
 
-Let's take a closer look at this example: the difference between each is an
-increase by three orders of magnitude: $10^6$, $10^9$, $10^{12}$. Thinking about
-seconds is not very useful, so let's translate this into something we can wrap
-our head around:
+Creusons cet exemple : la différence entre chaque représente trois ordres de
+magnitude ; $10^6$, $10^9$, $10^{12}$. Ce n'est pas très utile de penser en
+secondes, alors transformons-les afin de pouvoir les appréhender :
 
 \begin{itemize}
-  \item $10^6$: One million seconds was $1 \frac{1}{2}$ weeks ago.
-  \item $10^9$: One billion seconds was almost 32 years ago.
-  \item $10^{12}$: One trillion seconds ago Manhattan was covered under a thick
-  layer of ice.\footnote{One trillion seconds ($10^{12}$) was $31710$ years ago. The Last Glacial
-  Maximum was $33,000$ years ago.~\cite{wiki:LGM}}
+  \item $10^6$: Un million de secondes représentent la dernière semaine et demie.
+  \item $10^9$: Un milliard de secondes représentent les 32 dernières années.
+  \item $10^{12}$: Il y a un billion de secondes, Manhattan était couverte d'une
+  épaisse couche de glace\footnote{Un billion de secondes ($10^{12}$)
+  représentent les $31710$ dernières années. Le Dernier Maximum Glaciaire a eu
+  lieu il y a $33,000$ ans.~\cite{wiki:LGM}}.
 \end{itemize}
 
-\begin{center}
-  \includegraphics[width=\textwidth]{assets/images/xkcd-1225.png}
-  \captionof{figure}{About 1 trillion seconds ago. Source: xkcd 1225}
+\begin{figure}
+  \includegraphics{assets/images/xkcd-1225.png}
+  \caption{Il y a environ 1 billion de secondes. Source : xkcd 1225}
   \label{fig:xkcd-1225}
-\end{center}
+\end{figure}
 
-As soon as we enter the beyond-astronomical realm of modern
-cryptography, our intuition fails catastrophically. Bitcoin is built
-around large numbers and the virtual impossibility of guessing them.
-These numbers are way, way larger than anything we might encounter in
-day-to-day life. Many orders of magnitude larger. Understanding how
-large these numbers truly are is essential to understanding Bitcoin as a
-whole.
+Au moment où nous entrons dans les échelles astronomiques de la cryptographie
+moderne, notre instinct échoue dans les grandes largeurs. Bitcoin est bâti
+autour des grands nombres et de l'impossibilité virtuelle à les deviner. Ces
+nombres sont bien, bien plus grands que ceux qu'on peut rencontrer au quotidien.
+Plus grands de beaucoup d'ordres de magnitude. Il est indispensable
+d'appréhender à quel point ces nombres sont réellement grands pour pouvoir
+comprendre Bitcoin dans son ensemble.
 
-Let's take SHA-256\footnote{SHA-256 is part of the SHA-2 family of cryptographic
-hash functions developed by the NSA.~\cite{wiki:sha2}}, one of the hash
-functions\footnote{Bitcoin uses SHA-256 in its block hashing
-algorithm.~\cite{btcwiki:block-hashing}} used in Bitcoin, as a concrete example.
-It is only natural to think about 256 bits as \enquote{two hundred fifty-six,} which
-isn't a large number at all. However, the number in SHA-256 is talking about
-orders of magnitude --- something our brains are not well-equipped to deal with.
+Prenons comme exemple concret SHA-256\footnote{SHA-256 fait partie de la famille
+des fonctions de hachage cryptographique SHA-2 développée par la
+NSA.~\cite{wiki:sha2}}, l'une des fonctions de hachage\footnote{Bitcoin utilise
+SHA-256 dans son algorithme de hachage de bloc.~\cite{btcwiki:block-hashing}}
+utilisée par Bitcoin. Il est naturel de se dire que 256 bits ne sont que
+\enquote{deux cent cinquante-six}, ce qui n'est pas du tout un grand nombre.
+Pourtant, le nombre dans SHA-256 représente des ordres de magnitude -- une chose
+pour laquelle nos cerveaux ne sont pas équipés.
 
-While bit length is a convenient metric, the true meaning of 256-bit
-security is lost in translation. Similar to the millions ($10^6$) and
-billions ($10^9$) above, the number in SHA-256 is about orders of magnitude
-($2^{256}$).
+Bien que le nombre de bits soit une métrique appropriée, le vrai sens d'une
+sécurité 256-bit se perd dans l'interprétation. À l'image des millions ($10^6$)
+et des milliards ($10^9$) ci-dessus, le nombre dans SHA-256 parle d'ordres
+de magnitude ($2^{256}$).
 
-So, how strong is SHA-256, exactly?
+Mais alors à quel point SHA-256 est-il solide, au juste ?
 
 \begin{quotation}\begin{samepage}
-\enquote{SHA-256 is very strong. It's not like the incremental step from MD5
-to SHA1. It can last several decades unless there's some massive
-breakthrough attack.}
-\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, in a reply to questions about SHA-256 collisions. \cite{satoshi-sha256}}
+\enquote{SHA-256 est très solide. Ce n'est pas incrémental comme passer de MD5 à
+SHA1. Ça pourrait prendre plusieurs décennies avant une attaque massive
+révolutionnaire.}
+\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, dans une
+réponse aux questions sur les collisions SHA-256. \cite{satoshi-sha256}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Let's spell things out. $2^{256}$ equals the following number:
+Appelons un chat un chat. $2^{256}$ représente ce nombre :
 
 \begin{quotation}\begin{samepage}
-    115 quattuorvigintillion 792 trevigintillion 89 duovigintillion 237
-    unvigintillion 316 vigintillion 195 novemdecillion 423 octodecillion 570
-    septendecillion 985 sexdecillion 8 quindecillion 687 quattuordecillion 907
-    tredecillion 853 duodecillion 269 undecillion 984 decillion 665 nonillion
-    640 octillion 564 septillion 39 sextillion 457 quintillion 584 quadrillion 7
-    trillion 913 billion 129 million 639 thousand 936.
+115 duodecilliards 792 duodecillions 89 undecilliards 237 undecillions 316
+decilliards 195 decillions 423 nonilliards 570 nonillions 985 octilliards 8
+octillions 687 septilliards 907 septillions 853 sextilliards 269 sextillions 984
+quintilliards 665 quintillions 640 quadrilliards 564 quadrillions 39 trilliards
+457 trillions 584 billiards 7 billions 913 milliards 129 millions 639 mille 936.
 \end{samepage}\end{quotation}
 
-That's a lot of nonillions! Wrapping your head around this number is
-pretty much impossible. There is nothing in the physical universe to
-compare it to. It is far larger than the number of atoms in the
-observable universe. The human brain simply isn't made to make sense of
-it.
+Ça fait un paquet de quintillions ! Se faire une idée de ce nombre est somme
+toute impossible. Il n'existe rien dans l'univers physique à quoi le comparer.
+Ça représente bien plus que le nombre d'atomes de l'univers observable. Le
+cerveau humain n'est tout simplement pas fait pour le comprendre.
 
 \newpage
 
-One of the best visualizations of the true strength of SHA-256 is a video by
-Grant Sanderson. Aptly named \textit{\enquote{How secure is 256 bit
-security?}}\footnote{Watch the video at \url{https://youtu.be/S9JGmA5_unY}} it
-beautifully shows how large a 256-bit space is. Do yourself a favor and take the
-five minutes to watch it. As all other \textit{3Blue1Brown} videos it is not
-only fascinating but also exceptionally well made. Warning: You might fall down
-a math rabbit hole.
+On trouve l'une des meilleures représentations de la vraie force de SHA-256 dans
+une vidéo de Grant Sanderson. Judicieusement nommée \textit{\enquote{À quel
+point la sécurité 256-bit est-elle sûre ?}}\footnote{Regardez la vidéo sur
+\url{https://youtu.be/S9JGmA5_unY}}, elle montre parfaitement l'immensité d'un
+espace de cette taille. Rendez-vous service et prenez cinq minutes pour la
+regarder. Comme toutes les vidéos de \textit{3Blue1Brown} celle-ci est tout
+autant fascinante qu'exceptionnellement bien faite. Mais attention : vous
+pourriez bien tomber dans un terrier de lapin mathématique.
 
-\begin{center}
-  \includegraphics[width=\textwidth]{assets/images/youtube-vid-inverted.png}
-  \captionof{figure}{Illustration of SHA-256 security. Original graphic by Grant Sanderson aka 3Blue1Brown.}
+\begin{figure}
+  \includegraphics{assets/images/youtube-vid-inverted.png}
+  \caption{Illustration de la sécurité dans SHA-256. Schéma original de Grant
+  Sanderson alias 3Blue1Brown.}
   \label{fig:youtube-vid-inverted}
-\end{center}
+\end{figure}
 
-Bruce Schneier~\cite{web:schneier} used the physical limits of computation to put this
-number into perspective: even if we could build an optimal computer,
-which would use any provided energy to flip bits perfectly~\cite{wiki:landauer}, build a
-Dyson sphere\footnote{A Dyson sphere is a hypothetical megastructure that completely encompasses a star and captures a large percentage of its power output.~\cite{wiki:dyson}} around our sun, and let it run for 100 billion billion
-years, we would still only have a $25\%$ chance to find a needle in a
-256-bit haystack.
+Bruce Schneier~\cite{web:schneier} s'est servi des limites physiques de
+l'informatique afin de relativiser ce nombre : même si nous parvenions à
+construire un ordinateur optimal, qui utiliserait sans perte l'énergie fournie
+pour manipuler les bits~\cite{wiki:landauer}, que nous construisions une sphère
+de Dyson\footnote{Une sphère de Dyson est une mégastructure hypothétique qui
+entoure totalement une étoile et capture un grand pourcentage de son
+énergie.~\cite{wiki:dyson}} autour du Soleil et que nous les laissions tourner
+pendant 100 milliards de milliards d'années, nous n'aurions que $25\%$ de
+chances de trouver une aiguille dans une botte de 256 bits.
 
 \begin{quotation}\begin{samepage}
-\enquote{These numbers have nothing to do with the technology of the devices;
-they are the maximums that thermodynamics will allow. And they
-strongly imply that brute-force attacks against 256-bit keys will be
-infeasible until computers are built from something other than matter
-and occupy something other than space.}
-\begin{flushright} -- Bruce Schneier\footnote{Bruce Schneier, \textit{Applied Cryptography} \cite{bruce-schneier}}
+\enquote{Ces nombres n'ont rien à voir avec la technologie des appareils ; ce
+sont les maximums autorisés par la thermodynamique. Et ils suggèrent fortement
+que les attaques par force brute contre des clés de 256 bits ne seront pas
+envisageables avant que les ordinateurs ne soient faits d'autre chose que la
+matière et occupent autre chose que l'espace.}
+\begin{flushright} -- Bruce Schneier\footnote{Bruce Schneier,
+\textit{Cryptographie appliquée} \cite{bruce-schneier}}
 \end{flushright}\end{samepage}\end{quotation}
 
+On ne peut surestimer la profondeur de ces mots. Une cryptographie solide
+renverse l'équilibre des pouvoirs du monde physique auquel nous sommes habitués.
+Dans notre réalité, les choses incassables n'existent pas. Si vous y mettez
+assez de force, vous pourrez ouvrir n'importe quelle porte, boîte ou coffre au
+trésor.
 
-It is hard to overstate the profoundness of this. Strong cryptography
-inverts the power-balance of the physical world we are so used to.
-Unbreakable things do not exist in the real world. Apply enough force,
-and you will be able to open any door, box, or treasure chest.
+Le coffre au trésor de Bitcoin est très différent. Il est protégé par une
+cryptographie solide, qui ne laisse pas la place à la force brute. Tant que les
+hypothèses mathématiques sous-jacentes s'appliqueront, nous n'aurons que cette
+force brute à notre disposition. Bon, d'accord, il y a aussi l'option d'une
+attaque globale à la clé à molette à 5\$ (Figure~\ref{fig:xkcd-538}). Mais la
+torture ne fonctionnera pas pour toutes les adresses bitcoin et les remparts
+cryptographiques de bitcoin mettront en échec les attaques par force brute.
+Même si vous attaquez avec la puissance d'un millier d'étoiles. Littéralement.
 
-Bitcoin's treasure chest is very different. It is secured by strong
-cryptography, which does not give way to brute force. And as long as the
-underlying mathematical assumptions hold, brute force is all we have.
-Granted, there is also the option of a global \$5 wrench attack (Figure~\ref{fig:xkcd-538})
-But torture won't work for all bitcoin addresses, and the cryptographic
-walls of bitcoin will defeat brute force attacks. Even if you come at it
-with the force of a thousand suns. Literally.
-
-\begin{center}
+\begin{figure}
   \centering
   \includegraphics[width=8cm]{assets/images/xkcd-538.png}
-  \captionof{figure}{\$5 wrench attack. Source: xkcd 538}
+  \caption{Attaque à la clé à molette à 5\$. Source : xkcd 538}
   \label{fig:xkcd-538}
-\end{center}
+\end{figure}
 
-This fact and its implications were poignantly summarized in the call
-to cryptographic arms: \textit{\enquote{No amount of coercive force will ever solve
-a math problem.}}
+Ce fait et ses répercussions ont été résumés de façon bouleversante dans l'appel
+aux armes cryptographiques : \textit{\enquote{Aucune force coercitive ne
+résoudra jamais un problème de maths.}}
 
 \begin{quotation}\begin{samepage}
-\enquote{It isn't obvious that the world had to work this way. But somehow the
-universe smiles on encryption.}
-\begin{flushright} -- Julian Assange\footnote{Julian Assange, \textit{A Call to Cryptographic Arms} \cite{call-to-cryptographic-arms}}
+\enquote{Ça n'avait rien d'évident, que le monde finirait par fonctionner comme
+ça. Mais d'une façon ou d'une autre, l'univers sourit au chiffrement.}
+\begin{flushright} -- Julian Assange\footnote{Julian Assange, \textit{Un appel
+aux armes cryptographiques} \cite{call-to-cryptographic-arms}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Nobody yet knows for sure if the universe's smile is genuine or not. It
-is possible that our assumption of mathematical asymmetries is wrong and
-we find that P actually equals NP \cite{wiki:pnp}, or we find surprisingly quick
-solutions to specific problems \cite{wiki:discrete-log} which we currently assume to be hard.
-If that should be the case, cryptography as we know it will cease to
-exist, and the implications would most likely change the world beyond
-recognition.
+Personne ne sait encore avec certitude si le sourire de l'univers est
+authentique. Il est possible que notre hypothèse des asymétries mathématiques
+soit fausse et que nous découvrions qu'en réalité P est égal à NP
+\cite{wiki:pnp} ou que nous trouvions étonnamment rapidement une solution à des
+problèmes spécifiques \cite{wiki:discrete-log} que nous estimons actuellement
+complexes. Si cela devait arriver, la cryptographie telle que nous la
+connaissons disparaîtrait et les conséquences changeraient sans doute
+radicalement la face du monde.
 
 \begin{quotation}\begin{samepage}
-\enquote{Vires in Numeris} = \enquote{Strength in Numbers}\footnote{\textit{Vires in Numeris} was first proposed as a Bitcoin motto by the bitcointalk user \textit{epii}~\cite{epii}}
+\enquote{Vires in Numeris} = \enquote{Les forces dans les
+nombres}\footnote{\textit{Vires in Numeris} à été proposé comme devise de
+Bitcoin pour la première fois par l'utilisateur de bitcointalk
+\textit{epii}~\cite{epii}}
 \end{samepage}\end{quotation}
 
-\textit{Vires in numeris} is not only a catchy motto used by bitcoiners. The
-realization that there is an unfathomable strength to be found in
-numbers is a profound one. Understanding this, and the inversion of
-existing power balances which it enables changed my view of the world
-and the future which lies ahead of us.
+\textit{Vires in numeris} n'est pas qu'un slogan accrocheur pour les bitcoiners.
+La prise de conscience d'une force inimaginable présente dans les nombres est
+intense. En faire l'expérience et comprendre l'inversion dans l'équilibre des
+pouvoirs existants qui en découle a changé ma façon de voir le monde et l'avenir
+qui nous attend.
 
-One direct result of this is the fact that you don't have to ask anyone
-for permission to participate in Bitcoin. There is no page to sign up,
-no company in charge, no government agency to send application forms to.
-Simply generate a large number and you are pretty much good to go. The
-central authority of account creation is mathematics. And God only knows
-who is in charge of that.
+Un effet direct de cela, c'est que vous n'avez pas à demander la permission à
+quiconque pour participer à Bitcoin. Il n'y a pas de page d'inscription, pas
+d'entreprise qui en est responsable, pas d'agence publique à qui envoyer les
+formulaires. Générez simplement un grand nombre et vous êtes à peu près paré à y
+aller. L'autorité centrale sur la création des comptes, ce sont les
+mathématiques. Et Dieu seul sait qui en est responsable.
 
-\begin{center}
-  \includegraphics[width=\textwidth]{assets/images/elliptic-curve-examples.png}
-  \captionof{figure}{Elliptic curve examples. Graphic cc-by-sa Emmanuel Boutet.}
+\begin{figure}
+  \includegraphics{assets/images/elliptic-curve-examples.png}
+  \caption{Exemples de courbes elliptiques. Crédit schéma CC-BY-SA Emmanuel
+  Boutet.}
   \label{fig:elliptic-curve-examples}
-\end{center}
+\end{figure}
 
-Bitcoin is built upon our best understanding of reality. While there are
-still many open problems in physics, computer science, and mathematics,
-we are pretty sure about some things. That there is an asymmetry between
-finding solutions and validating the correctness of these solutions is
-one such thing. That computation needs energy is another one. In other
-words: finding a needle in a haystack is harder than checking if the
-pointy thing in your hand is indeed a needle or not. And finding the
-needle takes work.
+Bitcoin est bâti sur notre meilleure compréhension de la réalité. Certes, il
+reste bien des problèmes non-résolus en physique, en informatique et en
+mathématiques, mais il y a des choses dont nous sommes plutôt sûrs. Qu'il y ait
+une asymétrie entre trouver des solutions et valider la justesse de ces
+solutions en est une. Que les calculs requièrent de l'énergie en est une autre.
+En d'autres termes : trouver une aiguille dans une botte de foin est plus
+difficile que de vérifier si le truc pointu dans votre main est bien une
+aiguille. Et trouver l'aiguille prend du temps.
 
-The vastness of Bitcoin's address space is truly mind-boggling. The
-number of private keys even more so. It is fascinating how much of our
-modern world boils down to the improbability of finding a needle in an
-unfathomably large haystack. I am now more aware of this fact than ever.
+L'immensité de l'espace d'adressage de Bitcoin est vraiment ahurissante. Le
+nombre de clés privées l'est encore plus. C'est fascinant de se rendre compte à
+quel point notre monde moderne se résume à l'improbabilité de trouver une
+aiguille dans une botte de foin incommensurable. J'en suis conscient plus que
+jamais, dorénavant.
 
-\paragraph{Bitcoin taught me that there is strength in numbers.}
+\paragraph{Bitcoin m'a appris que les nombres renfermaient de la puissance.}
 
 % ---
 %
